Clears Buffer and Builder to save memory - not confirmed